--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
 .terraform/
 .terraform.lock.hcl
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash logs
+crash.log
+crash.*.log
+
+# Terraform variable override files
+*.tfvars.json
+*.tfvars
+
+# Ignore override files as they are usually used for local configuration
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Ignore lock file
+.terraform.lock.hcl
+
